Prepare plugin for production use (#18)
* Adding tests

* Load Resource files from tests to compare output

* Adding tests for getting mappings and settings

* Intercepting AcknowledgedResponse when calling putTemplate

* Adding unit tests for putTemplate, create and indexExists methods

* Adding mock for indexExists() method

* Adding a listener to create() that ensures the index is created

* Adding javadocs and for-each loop for multiple index creation.

* Adding missing javadoc

* Adding functionality to load mappings and index settings into a template.

* Adding javadocs to stringToMap

* Split getting mappings and settings to separate methods

* Add getter for templates Map

* Read the templates file only once

* Add exception handling

* Fix tests to fit latest changes in WazuhIndices

* Fix tests to fit latest changes in WazuhIndices

* Split yaml tests to separate files

* Instantiate the WazuhIndices class upon node startup.

* Simplify WazuhIndices class

* Add DEVELOPER_GUIDE.md

* Fix stuff

* Add Javadoc

* Add some unit tests

* Update DEVELOPER_GUIDE.md

* Skip failing checks

---------

Signed-off-by: Álex Ruiz <alejandro.ruiz.becerra@wazuh.com>
Co-authored-by: Fede Tux <fede@fernetcave.com>
Co-authored-by: Álex Ruiz <alejandro.ruiz.becerra@wazuh.com>